--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
     <header id="header" class="alt skel-layers-fixed">
         <nav id="nav">
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="elements.html">Vaardigheden</a></li>
-                <li><a href="elements.html">Projecten</a></li>
-                <li><a href="CV.html">CV</a></li>
-                <li><a href="elements.html">Contact</a></li>
+                <li><a href="#over mij">Over mij</a></li>
+                <li><a href="#vaardigheden">Vaardigheden</a></li>
+                <li><a href="#projecten">Projecten</a></li>
+                <li><a href="#cv">CV</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -44,30 +44,112 @@
     <section id="banner">
         <div class="inner">
             <h2>Joran Sipahi</h2>
-            <p>
-                E-Portfolio </p>
+            <p> E-Portfolio </p>
         </div>
     </section>
 
     <!-- CTA -->
-    <section id="cta" class="wrapper style3">
-        <h2>Mijn gegevens</h2>
-        <ul class="actions">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam vero a inventore molestiae cumque saepe veniam vitae magnam facere voluptates doloribus odio, rem eum, in fuga nostrum adipisci commodi ratione!</p>
+    <section id="cta" class="wrapper style2">
+        <p>Mijn naam is Joran Sipahi, tweedejaarsstudent bachelor toegepaste informatica aan de UC Leuven-Limburg. Op deze website kan U alle informatie vinden in verband met mijn persoonlijke projecten en vaardigheden. Ook mijn cv en contactgegevens zijn hier beschikbaar. Indien U vragen hebt is het altijd mogelijk mij een mail te sturen.</p>
+    </section>
+
+    <section class="wrapper style3">
+        <a name="over mij"></a>
+        <h2>over mij</h2>
+        <table>
+            <tr>
+                <td>Naam:</td>
+                <td>Joran Sipahi</td>
+            </tr>
+            <tr>
+                <td>Geboortedatum:</td>
+                <td>31/10/1998</td>
+            </tr>
+            <tr>
+                <td>Diploma:</td>
+                <td>Secundair Onderwijs ASO Latijn-moderne talen</td>
+            </tr>
+            <tr>
+                <td>Vrije tijd:</td>
+                <td>Computer, Gaming, Game Development, Zwemmen, Tekenen</td>
+            </tr>
+        </table>
+    </section>
+
+    <section class="wrapper style3">
+        <a name="vaardigheden"></a>
+        <h2>Vaardigheden</h2>
+        <table>
+            <h3>Werkervaring</h3>
+            <tr>
+                <th>Werkgever</th>
+                <th></th>
+                <th></th>
+            </tr>
+            <tr>
+                <td>WTCB (Wetenschappelijk en Technisch Centrum voor het Bouwbedrijf) (vakantieJob, reeds 3 jaar)</td>
+                <td>Administratieve taken: Boekhouding, Planning</td>
+                <td>Observatie van de werking van een grootschalig bedrijf</td>
+            </tr>
+            <tr>
+                <td>Zelfstandig (2 jaar) </td>
+                <td>Grafisch ontwerp: design via computer, zowel vlak als 3D-modellering</td>
+                <td>Zelfstandige marketing en publiciteit: Het bereiken van mogelijke klanten via het internet. </td>
+            </tr>
+            <tr>
+                <td>Zelfstandig (1 jaar) </td>
+                <td>Web Design: Verkoop en design van gepersonaliseerde websites gebaseert op de noden van de klant. </td>
+            </tr>
+        </table>
+        <h3>Hobbies en andere vaardigheden</h3>
+        <table>
+            <tr>
+                <th>Vaardigheid</th>
+                <th>Toelichting</th>
+                <th></th>
+            </tr>
+            <tr>
+                <td>Tekenen op computer, Gebruik van verschillende software: PhotoShop, Paint.NET, Gimp, Blender, Sketchup</td>
+                <td>Reeds 10 jaar besteed ik een groot deel van mijn vrije tijd aan het designen, uitwerken en bedenken van allerlei grafische ontwerpen. Doorheen de jaren heb ik dan ook verscheidene nieuwe software leren gebruiken om te trachten mijn creativeit beter in beeld te kunnen brengen.</td>
+            </tr>
+            <tr>
+                <td>Game Developmenent in kleinschalig team, Gebruik van verschillende software: Eclipse, IntelliJ, Visual Studio, Git, Unity Engine, Unreal Engine, GameMaker Engine</td>
+                <td>Sinds de aanvang van mijn studies Toegepaste Informatica werk ik samen met een kleine groep vrienden aan een aantal computergames. Vaak zijn deze projecten voornamelijk bedoelt om nieuwe werkwijzes en technologieën. Hierdoor heb ik veel ervaring kunnen opbouwen in verband met het werken in teams, hoe games bedacht en uitgewerkt worden, hoe games gemarket worden, etc</td>
+            </tr>
+            <tr>
+                <td>Software development, verschillende programmeertalen: C++, Python, Java, C#, JavaScript</td>
+                <td>Gedurende mijn studies aan de UCLL heb ik - zowel binnen het kader van de lessen als in mijn privéleven - Verscheidene softwaregerichte projecten en oefeningen gedaan die mij tot een beter inzicht brachten in verscheidene talen.</td>
+            </tr>
+        </table>
+    </section>
+
+    <section class="wrapper style3">
+        <a name="projecten"></a>
+        <h2>projecten</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum pariatur, aliquid repellendus cum ipsum nostrum porro natus quia animi culpa, libero, eum labore, quidem cupiditate. Minus impedit quia hic consectetur.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime molestias amet esse non totam accusamus ratione vitae delectus, debitis laudantium quisquam ut, numquam et in dicta iste ipsa vel saepe.Lorem ipsum dolor sit amet, consectetur adipisicing elit. A eum obcaecati iusto, ipsam sapiente alias sed tenetur vero quos veniam voluptates harum ipsum labore est cum, delectus, quam expedita. Asperiores.</p>
+    </section>
+
+    <section class="wrapper style3">
+        <a name="cv"></a>
+        <h2>cv</h2>
+        <ul class="menu">
+            <li><a href="http://www.linkedin.com/in/joran-sipahi-320a83159">Download mijn cv</a></li>
+        </ul>
+    </section>
+
+    <section class="wrapper style3">
+        <a name="contact"></a>
+        <h2>contact</h2>
+        <ul class="menu">
+            <li>Email: Josipahi@gmail.com</li>
+            <li>LinkedIn: <a href="http://www.linkedin.com/in/joran-sipahi-320a83159">Joran Sipahi</a>
+            </li>
         </ul>
     </section>
 
     <!-- Footer -->
     <footer id="footer">
-        <ul class="menu">
-            <li><a href="#">FAQ</a></li>
-            <li><a href="#">Terms of Use</a></li>
-            <li><a href="#">Privacy</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-        <span class="copyright">
-					&copy; Copyright. All rights reserved. Design by <a href="http://www.html5webtemplates.co.uk">Responsive Web Templates</a>
-				</span>
+        <p>Website door Joran Sipahi Academiejaar 2017-2018, copyright template design by <a href="http://www.html5webtemplates.co.uk">Responsive Web Templates</a></p>
     </footer>
 
 </body>
