--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
             </tr>
             <tr>
                 <td>Zelfstandig (1 jaar) </td>
-                <td>Web Design: Verkoop en design van gepersonaliseerde websites gebaseert op de noden van de klant. </td>
+                <td>Web Design: Verkoop en design van gepersonaliseerde websites gebaseerd op de noden van de klant. </td>
             </tr>
         </table>
-        <h3>Hobbies en andere vaardigheden</h3>
+        <h3>Hobby's en andere vaardigheden</h3>
         <table>
             <tr>
                 <th>Vaardigheid</th>
@@ -109,16 +109,16 @@
                 <th></th>
             </tr>
             <tr>
-                <td>Tekenen op computer, Gebruik van verschillende software: PhotoShop, Paint.NET, Gimp, Blender, Sketchup</td>
+                <td>Tekenen op computer, gebruik van verschillende software: PhotoShop, Paint.NET, Gimp, Blender, Sketchup</td>
                 <td>Reeds 10 jaar besteed ik een groot deel van mijn vrije tijd aan het designen, uitwerken en bedenken van allerlei grafische ontwerpen. Doorheen de jaren heb ik dan ook verscheidene nieuwe software leren gebruiken om te trachten mijn creativeit beter in beeld te kunnen brengen.</td>
             </tr>
             <tr>
-                <td>Game Developmenent in kleinschalig team, Gebruik van verschillende software: Eclipse, IntelliJ, Visual Studio, Git, Unity Engine, Unreal Engine, GameMaker Engine</td>
-                <td>Sinds de aanvang van mijn studies Toegepaste Informatica werk ik samen met een kleine groep vrienden aan een aantal computergames. Vaak zijn deze projecten voornamelijk bedoelt om nieuwe werkwijzes en technologieën. Hierdoor heb ik veel ervaring kunnen opbouwen in verband met het werken in teams, hoe games bedacht en uitgewerkt worden, hoe games gemarket worden, etc</td>
+                <td>Game Development in kleinschalig team, gebruik van verschillende software/IDEs: Eclipse, IntelliJ, Visual Studio, Git, Unity Engine, Unreal Engine, GameMaker Engine</td>
+                <td>Sinds de aanvang van mijn studies Toegepaste Informatica werk ik samen met een kleine groep vrienden aan een aantal computergames. Vaak zijn deze projecten voornamelijk bedoeld om nieuwe werkwijzes en technologieën te leren kennen. Hierdoor heb ik veel ervaring kunnen opbouwen in verband met het werken in team, hoe games bedacht en uitgewerkt worden, hoe games gemarket worden, etc</td>
             </tr>
             <tr>
                 <td>Software development, verschillende programmeertalen: C++, Python, Java, C#, JavaScript</td>
-                <td>Gedurende mijn studies aan de UCLL heb ik - zowel binnen het kader van de lessen als in mijn privéleven - Verscheidene softwaregerichte projecten en oefeningen gedaan die mij tot een beter inzicht brachten in verscheidene talen.</td>
+                <td>Gedurende mijn studies aan de UCLL heb ik - zowel binnen het kader van de lessen als in mijn privéleven - verscheidene softwaregerichte projecten en oefeningen gedaan die mij tot een beter inzicht brachten in verscheidene talen.</td>
             </tr>
         </table>
     </section>
@@ -126,7 +126,7 @@
     <section class="wrapper style3">
         <a name="projecten"></a>
         <h2>projecten</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum pariatur, aliquid repellendus cum ipsum nostrum porro natus quia animi culpa, libero, eum labore, quidem cupiditate. Minus impedit quia hic consectetur.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime molestias amet esse non totam accusamus ratione vitae delectus, debitis laudantium quisquam ut, numquam et in dicta iste ipsa vel saepe.Lorem ipsum dolor sit amet, consectetur adipisicing elit. A eum obcaecati iusto, ipsam sapiente alias sed tenetur vero quos veniam voluptates harum ipsum labore est cum, delectus, quam expedita. Asperiores.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum pariatur, aliquid repellendus cum ipsum nostrum porro natus quia animi culpa, libero, eum labore, quidem cupiditate. Minus impedit quia hic consectetur.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime molestias amet esse non totam accusamus ratione vitae delectus, debitis laudantium quisquam ut, numquam et in dicta iste ipsa vel saepe.Lorem ipsum dolor sit amet, consectetur adipisicing elit. A eum obcaecati iusto, ipsam sapiente alias sed tenetur vero quos veniam voluptates harum ipsum labore est cum, delectus, quam expedita. Asperiores.lorem</p>
     </section>
 
     <section class="wrapper style3">
