--- a/index.html
+++ b/index.html
@@ -79,61 +79,21 @@
     <section class="wrapper style3">
         <a name="vaardigheden"></a>
         <h2>Vaardigheden</h2>
-        <table>
-            <h3>Werkervaring</h3>
-            <tr>
-                <th>Werkgever</th>
-                <th></th>
-                <th></th>
-            </tr>
-            <tr>
-                <td>WTCB (Wetenschappelijk en Technisch Centrum voor het Bouwbedrijf) (vakantieJob, reeds 3 jaar)</td>
-                <td>Administratieve taken: Boekhouding, Planning</td>
-                <td>Observatie van de werking van een grootschalig bedrijf</td>
-            </tr>
-            <tr>
-                <td>Zelfstandig (2 jaar) </td>
-                <td>Grafisch ontwerp: design via computer, zowel vlak als 3D-modellering</td>
-                <td>Zelfstandige marketing en publiciteit: Het bereiken van mogelijke klanten via het internet. </td>
-            </tr>
-            <tr>
-                <td>Zelfstandig (1 jaar) </td>
-                <td>Web Design: Verkoop en design van gepersonaliseerde websites gebaseerd op de noden van de klant. </td>
-            </tr>
-        </table>
-        <h3>Hobby's en andere vaardigheden</h3>
-        <table>
-            <tr>
-                <th>Vaardigheid</th>
-                <th>Toelichting</th>
-                <th></th>
-            </tr>
-            <tr>
-                <td>Tekenen op computer, gebruik van verschillende software: PhotoShop, Paint.NET, Gimp, Blender, Sketchup</td>
-                <td>Reeds 10 jaar besteed ik een groot deel van mijn vrije tijd aan het designen, uitwerken en bedenken van allerlei grafische ontwerpen. Doorheen de jaren heb ik dan ook verscheidene nieuwe software leren gebruiken om te trachten mijn creativeit beter in beeld te kunnen brengen.</td>
-            </tr>
-            <tr>
-                <td>Game Development in kleinschalig team, gebruik van verschillende software/IDEs: Eclipse, IntelliJ, Visual Studio, Git, Unity Engine, Unreal Engine, GameMaker Engine</td>
-                <td>Sinds de aanvang van mijn studies Toegepaste Informatica werk ik samen met een kleine groep vrienden aan een aantal computergames. Vaak zijn deze projecten voornamelijk bedoeld om nieuwe werkwijzes en technologieën te leren kennen. Hierdoor heb ik veel ervaring kunnen opbouwen in verband met het werken in team, hoe games bedacht en uitgewerkt worden, hoe games gemarket worden, etc</td>
-            </tr>
-            <tr>
-                <td>Software development, verschillende programmeertalen: C++, Python, Java, C#, JavaScript</td>
-                <td>Gedurende mijn studies aan de UCLL heb ik - zowel binnen het kader van de lessen als in mijn privéleven - verscheidene softwaregerichte projecten en oefeningen gedaan die mij tot een beter inzicht brachten in verscheidene talen.</td>
-            </tr>
-        </table>
     </section>
 
     <section class="wrapper style3">
         <a name="projecten"></a>
-        <h2>projecten</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum pariatur, aliquid repellendus cum ipsum nostrum porro natus quia animi culpa, libero, eum labore, quidem cupiditate. Minus impedit quia hic consectetur.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime molestias amet esse non totam accusamus ratione vitae delectus, debitis laudantium quisquam ut, numquam et in dicta iste ipsa vel saepe.Lorem ipsum dolor sit amet, consectetur adipisicing elit. A eum obcaecati iusto, ipsam sapiente alias sed tenetur vero quos veniam voluptates harum ipsum labore est cum, delectus, quam expedita. Asperiores.lorem</p>
+        <h2>Projecten</h2>
+        <h3>Project Yahtzee OOO</h3>
+        <p>Gedurende de cursus OOO (Object Oriented Design) werkten wij in groep aan het project Yahtzee. Dit spel hebben wij volledig afgewerkt door gebruik te maken van java en spring.</p>
+        <img src="images/yahtzee.png" alt="Yahtzee" height="300" width="600">
     </section>
 
     <section class="wrapper style3">
         <a name="cv"></a>
-        <h2>cv</h2>
+        <h2>Curriculum Vitae</h2>
         <ul class="menu">
-            <li><a href="http://www.linkedin.com/in/joran-sipahi-320a83159">Download mijn cv</a></li>
+            <li><a href="/files/CV.pdf" download="CV">download</a></li>
         </ul>
     </section>
 
