--- a/index.html
+++ b/index.html
@@ -84,16 +84,26 @@
     <section class="wrapper style3">
         <a name="projecten"></a>
         <h2>Projecten</h2>
-        <h3>Project Yahtzee OOO</h3>
+        <h3>Project "Yahtzee OOO"</h3>
         <p>Gedurende de cursus OOO (Object Oriented Design) werkten wij in groep aan het project Yahtzee. Dit spel hebben wij volledig afgewerkt door gebruik te maken van java en spring.</p>
         <img src="images/yahtzee.png" alt="Yahtzee" height="300" width="600">
+
+        <h3>Project "IoT"</h3>
+        <p>Tijdens de 2e projectweek van mijn 2e academiejaar werd er in samenwerking met het bedrijf "to the point" gewerkt aan een project in verband met IoT. In groep hebben wij toen een systeem voor aanwezigheden in lokalen tot stand gebracht.</p>
+
+        <h3>Project "Rewind"</h3>
+        <p>In mijn vrije tijd werk ik samen met een team van medestudenten aan een computer game door gebruik te maken van de Unity Game Engine. Het resultaat hiervan draagt de naam "Rewind" en vorderd gestadig doorheen de jaren.</p>
+
+        <h3>Project Webapplicatie Internetprogrammeren</h3>
+        <p>In opdracht van de lectoren Internetprogrammeren heb ik met een klant samengezeten om een webapplicatie te creeëren die kan fungeren als simpele agenda voor taxiritten</p>
+
     </section>
 
     <section class="wrapper style3">
         <a name="cv"></a>
         <h2>Curriculum Vitae</h2>
         <ul class="menu">
-            <li><a href="/files/CV.pdf" download="CV">download</a></li>
+            <li><a href="/files/CV.pdf" download="CV">Download hier mijn Curriculum Vitae</a></li>
         </ul>
     </section>
 
