--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </tr>
             <tr>
                 <td>Vrije tijd:</td>
-                <td>Computer, Gaming, Game Development, Zwemmen, Tekenen</td>
+                <td>Computer, Gaming, Game Development, Zwemmen, Graphical Design</td>
             </tr>
         </table>
     </section>
@@ -79,11 +79,25 @@
     <section class="wrapper style3">
         <a name="vaardigheden"></a>
         <h2>Vaardigheden</h2>
+        <nav>
+            <ul>
+                <li><a href="gegevensbehandelen.html"> gegevens behandelen </a></li>
+                <li><a href="analyseren.html">analyseren</a></li>
+                <li><a href="oplossingenuitwerken.html">oplossingen uitwerken</a></li>
+                <li><a href="beheren.html">beheren</a></li>
+                <li><a href="projectmatigwerken.html">projectmatig werken</a></li>
+                <li><a href="communiceren.html">communiceren</a></li>
+                <li><a href="eigengedragaanpassen.html">eigen gedrag aanpassen</a></li>
+                <li><a href="kwaliteitsvolhandelen.html">kwaliteitsvol handelen</a></li>
+            </ul>
+        </nav>
+
     </section>
 
     <section class="wrapper style3">
         <a name="projecten"></a>
         <h2>Projecten</h2>
+
         <h3>Project "Yahtzee OOO"</h3>
         <p>Gedurende de cursus OOO (Object Oriented Design) werkten wij in groep aan het project Yahtzee. Dit spel hebben wij volledig afgewerkt door gebruik te maken van java en spring.</p>
         <img src="images/yahtzee.png" alt="Yahtzee" height="300" width="600">
@@ -96,7 +110,6 @@
 
         <h3>Project Webapplicatie Internetprogrammeren</h3>
         <p>In opdracht van de lectoren Internetprogrammeren heb ik met een klant samengezeten om een webapplicatie te creeëren die kan fungeren als simpele agenda voor taxiritten</p>
-
     </section>
 
     <section class="wrapper style3">
