--- a/analyseren.html
+++ b/analyseren.html
@@ -35,7 +35,7 @@
                         <h5>2.1 Informatie behoeften van een organisatie identificeren</h5></td>
                     <td>Kennis hebben van de missie van een organisatie Informatie omtrent de missie van een organisatie verzamelen Verzamelde informatie samenvatten Begrijpen van een probleem of opdracht Oorzaak)gevolg onderscheiden bij probleemdedectie</td>
                     <td>Onder begeleiding informatie omtrent de misie van een organisatie documenteren Herformuleren van een probleem of opdracht zodat de kern duidelijk wordt Onder begeleiding de kern van een probleem of opdracht duidelijk schetsen </td>
-                    <td>Zelfstandig informatie omtrent de missie van een organisatie documenteren Zelfstandig de kern van een probleem of opdracht duidelijk schetsen</td>
+                    <td style="color: lightblue;">Zelfstandig informatie omtrent de missie van een organisatie documenteren Zelfstandig de kern van een probleem of opdracht duidelijk schetsen</td>
                 </tr>
 
                 <tr>
@@ -43,7 +43,7 @@
                         <h5>2.2 
 De informatiebehoeften van een organisatie vertalen in concepten, schema's en relaties</h5></td>
                     <td>Noties hebben van bestaande methodieken om gegevens te structureren</td>
-                    <td>Onder begeleiding gebruik maken van een methodiek om gegevens te structureren Onder begeleiding de meest relevante methodiek toepassen om gegevens te structureren Onder begeleiding verschillende modellen op elkaar afstemmen</td>
+                    <td style="color: lightblue;">Onder begeleiding gebruik maken van een methodiek om gegevens te structureren Onder begeleiding de meest relevante methodiek toepassen om gegevens te structureren Onder begeleiding verschillende modellen op elkaar afstemmen</td>
                     <td>Zelfstandig gebruik maken van een methodiek om gegevens te structureren Zelfstandig de meest relevante methodiek toepassen om gegevens te structureren Zelfstandig verschillende modellen op elkaar afstemmen</td>
                 </tr>
 
@@ -53,7 +53,7 @@ De informatiebehoeften van een organisatie vertalen in concepten, schema's en re
 Mogelijke IT-oplossingen documenteren / formuleren</h5></td>
                     <td>Mogelijke oplossingen van gelijkaardige, bestaande problemen verzamelen</td>
                     <td>Bruikbare oplossingen opsommen Onder begeleiding pro's en contra's an de bruikbare oplossingen opsommen Onder begeleiding noodzaak van nieuwe oplossingen omschrijven</td>
-                    <td>Zelfstandig pro's en contra's van de bruikbare oplossingen opsommen Zelfstandig noodzaak van nieuwe oplossingen omschrijven</td>
+                    <td style="color: lightblue;">Zelfstandig pro's en contra's van de bruikbare oplossingen opsommen Zelfstandig noodzaak van nieuwe oplossingen omschrijven</td>
                 </tr>
 
                 <tr>
@@ -61,7 +61,7 @@ Mogelijke IT-oplossingen documenteren / formuleren</h5></td>
                         <h5>2.4 
 Mogelijke IT-oplossingen evalueren</h5></td>
                     <td>Notie hebben van de beschikbare criteria</td>
-                    <td>Onder begeleiding bruikbare oplossingen aftoetsen met behulp van beschikbare criteria</td>
+                    <td style="color: lightblue;">Onder begeleiding bruikbare oplossingen aftoetsen met behulp van beschikbare criteria</td>
                     <td>Zelfstandig bruikbare oplossingen aftoesten met behulp van beschikbare criteria</td>
                 </tr>
 
@@ -70,7 +70,7 @@ Mogelijke IT-oplossingen evalueren</h5></td>
                         <h5>2.5 
 Testprocedures opstellen voor nieuwe IT-oplossingen</h5></td>
                     <td>Betrokken partijen identificeren Domein voor elk van de partijen afbakenen</td>
-                    <td>Onder begeleiding voor elk van de partijen mogelijke concrete werkwijzen vastleggen</td>
+                    <td style="color: lightblue;">Onder begeleiding voor elk van de partijen mogelijke concrete werkwijzen vastleggen</td>
                     <td>Zelfstandig voor elk van de partijen mogelijke,concrete werkwijzen vastleggen</td>
                 </tr>
             </table>
