--- a/beheren.html
+++ b/beheren.html
@@ -35,7 +35,7 @@
                         <h5>4.1 
 IT-oplossingen (systemen,toepassingen,databanken) configureren, beveiligen en aanpassen</h5></td>
                     <td>Basisconfiguratie begrijpen Basisfunctionaliteit testen Beveiligings-procedures opvolgen IT-oplossingen opzetten a.d.h.v. gedetailleerde procedures</td>
-                    <td>IT-oplossingen opzetten a.d.h.v. standaarddocumentatie Configuratie aanpassen IT-oplossingen monitoren en beveiliging bewaken IT-oplossingen uitgebreid testen IT-oplossingen uitgebreid vergelijken</td>
+                    <td style="color: lightblue;">IT-oplossingen opzetten a.d.h.v. standaarddocumentatie Configuratie aanpassen IT-oplossingen monitoren en beveiliging bewaken IT-oplossingen uitgebreid testen IT-oplossingen uitgebreid vergelijken</td>
                     <td>Zelfstandig IT-oplossingen opzetten rekening houdend met de randvoorwaarden IT-oplossingen optimaliseren Compatibele IT-oplossingen integreren Risico-analyse uitvoeren Gemotiveerd kiezen tussen alternatieve IT-oplossingen</td>
                     <td>Volledig geïntegreerde omgeving creëren</td>
                 </tr>
