--- a/eigengedragaanpassen.html
+++ b/eigengedragaanpassen.html
@@ -62,7 +62,7 @@
                     <td>Legt vlot contact met onbekende mensen</td>
                     <td>Houdt in contacten rekening met de belangen van al de betrokkenen en vergeet daarbij zijn eigen visie niet</td>
                     <td>Heeft in al zijn contacten zowel aandacht voor de inhoud, de vorm als de relaties tussen de personen</td>
-                    <td>Neemt in moeilijke situaties het voortouw en zorgt op een gepaste manier voor een effectieve oplossing van het probleem</td>
+                    <td style="color: lightblue;">Neemt in moeilijke situaties het voortouw en zorgt op een gepaste manier voor een effectieve oplossing van het probleem</td>
                 </tr>
 
                 <tr>
@@ -70,7 +70,7 @@
                         <h5>7.5 opdrachten uit te voeren met doorzettingsvermogen</h5> </td>
                     <td>Weet dat sommige taken extra inspanningen vergen maar kan deze niet altijd opbrengen</td>
                     <td>Pakt ook moeilijke taken aan, maar laat de moed soms hangen als het niet lukt</td>
-                    <td>Neemt steeds zijn verantwoordelijkheid en zal alles doen om het werk tijdig af te hebben</td>
+                    <td style="color: lightblue;">Neemt steeds zijn verantwoordelijkheid en zal alles doen om het werk tijdig af te hebben</td>
                     <td>Bewaart in stressvolle situaties de rust en stimuleert anderen om moeilijke opdrachten toch uit te voeren</td>
                 </tr>
 
@@ -80,7 +80,7 @@
 tijdig externe deskundigheid inroepen</h5></td>
                     <td>Blijft heel lang proberen om een onoplosbaar probleem toch zelf op te lossen of roept onmiddellijk externe hulp in zonder eerst zelf voldoende na te denken</td>
                     <td>Probeert eerst gedurende geruime tijd om dan uiteindelijk toch externe hulp in te roepen</td>
-                    <td>Weet exact waar zijn grenzen liggen en roept daardoor op het juiste moment externe hulp in</td>
+                    <td style="color: lightblue;">Weet exact waar zijn grenzen liggen en roept daardoor op het juiste moment externe hulp in</td>
                     <td>Schat voor bijna elk probleem vooraf in waar en wanneer externe hulp noodzakelijk is en doet er dan ook beroep op</td>
                 </tr>
 
@@ -91,7 +91,7 @@ levenslang leren</h5></td>
                     <td>Weet dat hij zijn kennis verder moet uitbreiden maar wacht tot geschikte cursussen zich aandienen</td>
                     <td>Schoolt zich vooral bij in technieken die hij direct kan inzetten</td>
                     <td>Schoolt zich steeds bij om ook op lange termijn beter te functioneren</td>
-                    <td>Vindt er plezier in om zich steeds verder te vervolmaken en wil ook zaken leren die buiten zijn vakgebied liggen</td>
+                    <td style="color: lightblue;">Vindt er plezier in om zich steeds verder te vervolmaken en wil ook zaken leren die buiten zijn vakgebied liggen</td>
                 </tr>
             </table>
         </section>
