--- a/gegevensbehandelen.html
+++ b/gegevensbehandelen.html
@@ -58,7 +58,7 @@
                     <td>
                         <h5>1.4 Gegevens ter beschikking stellen</h5></td>
                     <td>Notie hebben van bestaande procedures om gegevens en veiligheidskopies op de slaan Notie hebben van procedures om gegevens uit te zuiveren Notie hebben van converteerprogramma's Gegevens opslaan in een aangereikt opslagmedium</td>
-                    <td>Gegevens oplaan en veiligheidskopies maken volgens een aangereikte procedure Gegevens uitzuiveren / valideren volgend een aangereikte procedure gegevens converteren en opslaan binnen eenzelfde opslag medium</td>
+                    <td style="color: lightblue;">Gegevens oplaan en veiligheidskopies maken volgens een aangereikte procedure Gegevens uitzuiveren / valideren volgend een aangereikte procedure gegevens converteren en opslaan binnen eenzelfde opslag medium</td>
                     <td>Zelfstandig een relavante kopieerprocedure bepalen toepassen van een efficiënte opslagprocedure Een validatiemethode bepalen en uitwerken voor een geïntegreerde toepassing Gegevens converteren om over te brengen naar andere media</td>
                 </tr>
 
