--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </tr>
             <tr>
                 <td>Diploma:</td>
-                <td>Secundair Onderwijs ASO Latijn-moderne talen</td>
+                <td>Secundair Onderwijs ASO Latijn-moderne talen / Latijn-wiskunde</td>
             </tr>
             <tr>
                 <td>Vrije tijd:</td>
@@ -91,6 +91,8 @@
                 <li><a href="kwaliteitsvolhandelen.html">kwaliteitsvol handelen</a></li>
             </ul>
         </nav>
+        <p>Mijn persoonlijk niveau voor elk van deze competenties is aangeduid in blauw</p>
+        <a href="/files/SWOT.pdf" download="SWOT">Download hier mijn SWOT-analyse voor meer info over mijn vaardigheden</a>
 
     </section>
 
@@ -100,7 +102,7 @@
 
         <h3>Project "Yahtzee OOO"</h3>
         <p>Gedurende de cursus OOO (Object Oriented Design) werkten wij in groep aan het project Yahtzee. Dit spel hebben wij volledig afgewerkt door gebruik te maken van java en spring.</p>
-        <img src="images/yahtzee.png" alt="Yahtzee" height="300" width="600">
+        <img src="images/yahtzee.png" alt="Yahtzee" height="150" width="300">
 
         <h3>Project "IoT"</h3>
         <p>Tijdens de 2e projectweek van mijn 2e academiejaar werd er in samenwerking met het bedrijf "to the point" gewerkt aan een project in verband met IoT. In groep hebben wij toen een systeem voor aanwezigheden in lokalen tot stand gebracht.</p>
@@ -110,6 +112,7 @@
 
         <h3>Project Webapplicatie Internetprogrammeren</h3>
         <p>In opdracht van de lectoren Internetprogrammeren heb ik met een klant samengezeten om een webapplicatie te creeëren die kan fungeren als simpele agenda voor taxiritten</p>
+        <a href="http://193.191.177.8:10018/internetprogrammeren-mvc-1.0-SNAPSHOT/">Bekijk hier de website.</a>
     </section>
 
     <section class="wrapper style3">
@@ -128,6 +131,18 @@
             <li>LinkedIn: <a href="http://www.linkedin.com/in/joran-sipahi-320a83159">Joran Sipahi</a>
             </li>
         </ul>
+        <div id="coloredBG">
+            <h4>Send me an email:</h4>
+            <form action="https://formspree.io/josipahi@gmail.com" method="POST">
+                <label>your name</label>
+                <input type="text" name="name">
+                <label>your adress</label>
+                <input type="email" name="_replyto">
+                <label>your mail</label>
+                <input type="text" name="message">
+                <input type="submit" value="Send">
+            </form>
+        </div>
     </section>
 
     <!-- Footer -->
