--- a/oplossingenuitwerken.html
+++ b/oplossingenuitwerken.html
@@ -35,7 +35,7 @@
                         <h5>3.1 
 Nieuwe It-oplossingen programmeren(gestructureerd,object georiënteerd, gedistribueerd)</h5></td>
                     <td>Notie hebben van bestaande Basisalgoritmes gebruiken in gekende situaties Alternatieven afwegen Mogelijke eenvoudige oplossingen uitwerken Localiseren van fouten (bugs)</td>
-                    <td>Controleren of verschillende oplossingen aan de vereiste specificaties voldoen Meest relevante oplossing kiezen Onder begeleiding complexe algoritmes toepassen Oplossingen genereren voor fouten (bugs)</td>
+                    <td style="color: lightblue;">Controleren of verschillende oplossingen aan de vereiste specificaties voldoen Meest relevante oplossing kiezen Onder begeleiding complexe algoritmes toepassen Oplossingen genereren voor fouten (bugs)</td>
                     <td>Zelfstandig complexe algoritmes toepassen Complexe oplossingen uitwerken</td>
                 </tr>
 
@@ -44,7 +44,7 @@ Nieuwe It-oplossingen programmeren(gestructureerd,object georiënteerd, gedistri
                         <h5>3.2 
 nieuwe IT-oplossingen implementeren</h5></td>
                     <td>In kaart brengen van systeemomgeving (HW & SW)</td>
-                    <td>Een gepaste omgeving kiezen Een implementatieplan opstellen Betrekken van gebruikers in het implementatieplan</td>
+                    <td style="color: lightblue;">Een gepaste omgeving kiezen Een implementatieplan opstellen Betrekken van gebruikers in het implementatieplan</td>
                     <td>In gebruik stellen van de nieuwe applicatie Opleiden van de gebruiker in de applicatie</td>
                 </tr>
 
@@ -53,7 +53,7 @@ nieuwe IT-oplossingen implementeren</h5></td>
                         <h5>3.3 
 Nieuwe IT-oplossingen documenteren</h5></td>
                     <td>Correct gedachten verwoorden</td>
-                    <td>Gebruiken van hulpmiddelen voor de documentatie Toevoegen van commentaarlijnen aan programma's</td>
+                    <td style="color: lightblue;">Gebruiken van hulpmiddelen voor de documentatie Toevoegen van commentaarlijnen aan programma's</td>
                     <td>Een handleiding schrijven voor een nieuwe applicatie</td>
                 </tr>
 
@@ -63,7 +63,7 @@ Nieuwe IT-oplossingen documenteren</h5></td>
 Nieuwe IT-oplossingen testen (op het niveau van de deelaspecten en van de integratie)</h5></td>
                     <td>Valideren van de deelaspecten</td>
                     <td>Valideren van de integratie</td>
-                    <td>Controleren van de werking van de applicatie in verschillende situaties Controleren van de werking van de applicatie in verschillende omgevingen</td>
+                    <td style="color: lightblue;">Controleren van de werking van de applicatie in verschillende situaties Controleren van de werking van de applicatie in verschillende omgevingen</td>
                 </tr>
             </table>
         </section>
