--- a/communiceren.html
+++ b/communiceren.html
@@ -36,7 +36,7 @@
 Mondeling en schriftelijk communiceren in het Nederlands en minstens één vreemde taal</h5></td>
                     <td>Hanteren van een correcte spelling en grammatica in een toegankelijke taal schrijven Goed verstaanbaar (volume, articulatie, tempo) en vlot spreken Zich tot de gesprekspartner richten Een korte onvoorbereide uiteenzetting geven</td>
                     <td>Teksten met een duidelijke structuur opstellen Eénduidig leesbare documenten schrijven Aanpassen van taal, woordenschat en spreektempo aan het publiek</td>
-                    <td>Een aantrekkende en motiverende schrijfstijl hanteren Een duidelijke, correcte leesbare synthese maken</td>
+                    <td style="color: lightblue;">Een aantrekkende en motiverende schrijfstijl hanteren Een duidelijke, correcte leesbare synthese maken</td>
                 </tr>
 
                 <tr>
@@ -47,7 +47,7 @@ technieken aanwenden</h5></td>
                     <td>Elementaire gespreks- en telefoontechnieken hanteren</td>
                     <td>Elementaire presentatie-, vergader- en notuleertechnieken hanteren Documentatie en hulpmiddelen voorzien voor een vergadering</td>
                     <td>Vergadertechnieken toepassen Rapporteertechnieken toepassen</td>
-                    <td>De verworden communicatie-technieken toepassen in gevarieerde situaties</td>
+                    <td style="color: lightblue;">De verworden communicatie-technieken toepassen in gevarieerde situaties</td>
                 </tr>
 
                 <tr>
@@ -55,7 +55,7 @@ technieken aanwenden</h5></td>
                         <h5>6.3 
 Deelnemen aan vergaderingen als lid of als voorzitter</h5></td>
                     <td>Actief meewerken</td>
-                    <td>Zinvolle bijdrage leveren Een agenda opstellen voor een eenvoudige vergadering Vergadering met een beperkte agenda voorzitten Als notulist deelnemen aan een eenvoudige vergadering</td>
+                    <td style="color: lightblue;">Zinvolle bijdrage leveren Een agenda opstellen voor een eenvoudige vergadering Vergadering met een beperkte agenda voorzitten Als notulist deelnemen aan een eenvoudige vergadering</td>
                     <td>Activerende rol vervullen Een vergadering efficiënt leiden Als notulist deelnemen aan een vergadering De inhoud van het verslag opmaken en uitzuiveren van concrete actiepunten </td>
                 </tr>
 
@@ -65,7 +65,7 @@ Deelnemen aan vergaderingen als lid of als voorzitter</h5></td>
 Mensen opleiden en begeleiden</h5></td>
                     <td>Aandachtig luisteren naar vragen en problemen Mensen aanzetten tot nadenken over eigen gedrag</td>
                     <td>Suggesties en tips formuleren Feedback geven over concreet gedrag</td>
-                    <td>Stimuleren van mensen op de experimenteren en te leren van fouten Mensen aanzetten tot systematische reflectie op eigen ervaringen</td>
+                    <td style="color: lightblue;">Stimuleren van mensen op de experimenteren en te leren van fouten Mensen aanzetten tot systematische reflectie op eigen ervaringen</td>
                     <td>Mensen aanzetten tot het stellen van vragen over valkuilen, motieven, drijfveren en idealen</td>
                 </tr>
             </table>
