--- a/kwaliteitsvolhandelen.html
+++ b/kwaliteitsvolhandelen.html
@@ -36,7 +36,7 @@
 een kwaliteitsvolle redenering opbouwen</h5></td>
                     <td>Reproduceert een redenering die hij in een soortgelijke context ooit heeft gezien</td>
                     <td>Verklaart op vraag zijn redenering door te verwijzen naar achterliggende modellen</td>
-                    <td>Zal spontaan een redenering opbouwen gebaseerd op achterliggende modellen</td>
+                    <td style="color: lightblue;">Zal spontaan een redenering opbouwen gebaseerd op achterliggende modellen</td>
                     <td>Adviseert welke redenering in welke omstandigheden het best gebruikt kan worden</td>
                 </tr>
                 <tr>
@@ -65,7 +65,7 @@ oplossingen leveren die gebruiksvriendelijk en flexibel</h5></td>
 handelen conform de regelgeving</h5></td>
                     <td>Heeft notie van de regelgeving en tracht deze in ruime mate toe te passen</td>
                     <td>Is bereid om aangegeven regels correct toe te passen</td>
-                    <td>Kent de regelgeving en handelt er consequent naar</td>
+                    <td style="color: lightblue;">Kent de regelgeving en handelt er consequent naar</td>
                     <td>Is in staat om een bijdrage te leveren bij het maken van regelgeving en kan anderen aansporen om deze dan toe te passen</td>
                 </tr>
 
@@ -73,7 +73,7 @@ handelen conform de regelgeving</h5></td>
                     <td>
                         <h5>8.5 
 rekening houden met de bedrijfseconomische context</h5> </td>
-                    <td>Is er zich van bewust dat je rekening moet houden met budgettaire beperkingen</td>
+                    <td style="color: lightblue;">Is er zich van bewust dat je rekening moet houden met budgettaire beperkingen</td>
                     <td>Stelt een gefundeerde kostenbatenanalyse op</td>
                     <td>Kent de economische randvoorwaarden en stemt zijn handelen daar optimaal op af</td>
                     <td>Heeft goed zicht op de wijzigende economische context en kan op basis daarvan een overtuigend advies formuleren</td>
@@ -85,7 +85,7 @@ rekening houden met de bedrijfseconomische context</h5> </td>
 een kwaliteitssysteem toepassen</h5></td>
                     <td>Is zich bewust van het bestaan van het kwaliteitssysteem en kan het raadplegen</td>
                     <td>Past onder begeleiding een bestaand kwaliteitssysteem toe</td>
-                    <td>Past zelfstandig en spontaan het kwaliteitssysteem toe</td>
+                    <td style="color: lightblue;">Past zelfstandig en spontaan het kwaliteitssysteem toe</td>
                     <td>Kan een nieuw kwaliteitssysteem mee implementeren en ziet er op toe dat het correct wordt toegepast</td>
                 </tr>
             </table>
