--- a/projectmatigwerken.html
+++ b/projectmatigwerken.html
@@ -36,7 +36,7 @@
 Het project splitsen in taken en deeltaken</h5></td>
                     <td>Inzien van het nut van een stapsgewijze aanpak Onderscheiden van belangrijke en minder belangrijke deeltaken</td>
                     <td>Onder begeleiding een opdracht van beperkte omvang opdelen in deeltaken Onder begeleiding een complexe opdracht opdelen in deeltaken</td>
-                    <td>Zelfstandig een opdracht van beperkte omvang opdelen in deeltaken Zelfstandig een complexe opdracht opdelen in deeltaken</td>
+                    <td style="color: lightblue;">Zelfstandig een opdracht van beperkte omvang opdelen in deeltaken Zelfstandig een complexe opdracht opdelen in deeltaken</td>
                 </tr>
 
                 <tr>
@@ -44,7 +44,7 @@ Het project splitsen in taken en deeltaken</h5></td>
                         <h5>5.2 
 Planningen opstellen (tijdsplanning,budgetplanning,middelenplan)</h5></td>
                     <td>Het belang van een tijdsplanning inzien Het belang van een planning van de specifieke middelen inzien Het belang van het inventariseren van de middelen inzien Zelfstandig de middelen inventariseren voor een eenvoudige opdracht</td>
-                    <td>Onder begeleiding een eenvoudige tijdsplanning opmaken voor een opdracht van een beperkte omvang Onder begeleiding een tijdsplanning opmaken voor een geïntegreerde opdracht Onder begeleiding de specifieke middelen plannen voor een geïntegreerde opdracht</td>
+                    <td style="color: lightblue;">Onder begeleiding een eenvoudige tijdsplanning opmaken voor een opdracht van een beperkte omvang Onder begeleiding een tijdsplanning opmaken voor een geïntegreerde opdracht Onder begeleiding de specifieke middelen plannen voor een geïntegreerde opdracht</td>
                     <td>Zelfstandig een tijdplanning opmaken voor een geïntegreerde opdracht Zelfstandig de specifieke middelen plannen voor een geïntegreerde opdracht</td>
                     <td>Zelfstandig een volledige planning opmaken voor een complexe opdracht</td>
                 </tr>
@@ -54,7 +54,7 @@ Planningen opstellen (tijdsplanning,budgetplanning,middelenplan)</h5></td>
                         <h5>5.3 
 Een project opvolgen(tijd,budget,deadlines)</h5></td>
                     <td>Onder begeleiding nagaan of de opgelegde deadlines gerespecteerd worden voor een eenvoudige opdracht</td>
-                    <td>Zelfstandig nagaan of de opgelegde deadlines gerespecteerd worden voor een eenvoudige opdracht Onder begeleiding nagaan of de opgelegde deadlines gerespecteerd worden voor een geïntegreerde opdracht</td>
+                    <td style="color: lightblue;">Zelfstandig nagaan of de opgelegde deadlines gerespecteerd worden voor een eenvoudige opdracht Onder begeleiding nagaan of de opgelegde deadlines gerespecteerd worden voor een geïntegreerde opdracht</td>
                     <td>Zelfstandig nagaan of de opgelegde deadlines gerespecteerd worden voor een geïntegreerde opdracht</td>
                 </tr>
 
@@ -64,7 +64,7 @@ Een project opvolgen(tijd,budget,deadlines)</h5></td>
 In een multidisciplinair en/of multicultueerl team werken, als teamlid of projectleider</h5></td>
                     <td>Notie hebben van de verschillende rollen van de deelnemers in een project Notie hebben van de verschillende eigenheden van de deelmeners in een project Kennis hebben van mogelijke benaderingen van de teamleden Kennis hebben van de mogeljke conflicten binnen een team</td>
                     <td>Zelf invullen van mogelijke rollen in een beperkte opdracht Rekening houden met de diversiteit van de teamleden Anticiperen op mogelijke meningsverschillen binnen een team</td>
-                    <td>Zelf invullen van mogelijke rollen in een geïntegreerde opdracht Benutten van de diversiteit binnen een team Oplossen van meningsverschillen binnen een team</td>
+                    <td style="color: lightblue;">Zelf invullen van mogelijke rollen in een geïntegreerde opdracht Benutten van de diversiteit binnen een team Oplossen van meningsverschillen binnen een team</td>
                 </tr>
             </table>
         </section>
